--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<table>
 					<tr>
 						<th rowspan="2"><a href="novDePC/articulo1.html">
-								<img src="novDePC/images/art1 presentacion.jpg" width="80" height="80" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+								<img src="novDePC/images/art1 presentacion.jpg" width="100%" height="80" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
 			                                        de los
 			                                        Anillos">
 							</a></th>
@@ -63,7 +63,7 @@
 				<table>
 					<tr>
 						<th rowspan="2"><a href="novDePC/articulo2.html">
-								<img src="novDePC/images/art2 twitch.jpg" width="80" height="80"
+								<img src="novDePC/images/art2 twitch.jpg" width="100%" height="80"
 									alt="¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming">
 							</a></th>
 					</tr>
@@ -107,7 +107,7 @@
 			<h2>Noticias:</h2>
 			<p class="cuerpo">
 			<article class="article"><a href="novDePC/articulo1.html">
-					<img src="novDePC/images/art1 presentacion.jpg" width="250" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+					<img src="novDePC/images/art1 presentacion.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
 		                			                                        de los
 		                			                                        Anillos">
 				</a>
@@ -122,7 +122,7 @@
 			</p>
 			<p class="cuerpo">
 			<article class="article"><a href="novDePC/articulo2.html">
-					<img src="novDePC/images/art2 twitch.jpg" width="250" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+					<img src="novDePC/images/art2 twitch.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
 					                			                                        de los
 					                			                                        Anillos">
 				</a>
@@ -134,7 +134,7 @@
 			</p>
 			<p class="cuerpo">
 			<article class="article"><a href="novDeConsolas/articulo1.html">
-					<img src="novDeConsolas/images/art1 presentacion.jpg" width="250" height="200"
+					<img src="novDeConsolas/images/art1 presentacion.jpg" width="100%" height="200"
 						alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
 				</a>
 				<h2><a href="novDeConsolas/articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o hace
