--- a/novDeConsolas/novDeConsolas.html
+++ b/novDeConsolas/novDeConsolas.html
@@ -66,7 +66,7 @@
             <h2>Noticias:</h2>
             <p class="cuerpo">
             <article class="article"><a href="../novDePC/articulo1.html">
-                    <img src="../novDePC/images/art1 presentacion.jpg" width="250" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+                    <img src="../novDePC/images/art1 presentacion.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
             		                			                                        de los
             		                			                                        Anillos">
                 </a>
@@ -81,7 +81,7 @@
             </p>
             <p class="cuerpo">
             <article class="article"><a href="../novDePC/articulo2.html">
-                    <img src="../novDePC/images/art2 twitch.jpg" width="250" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+                    <img src="../novDePC/images/art2 twitch.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
             					                			                                        de los
             					                			                                        Anillos">
                 </a>
@@ -93,7 +93,7 @@
             </p>
             <p class="cuerpo">
             <article class="article"><a href="articulo1.html">
-                    <img src="images/art1 presentacion.jpg" width="250" height="200"
+                    <img src="images/art1 presentacion.jpg" width="100%" height="200"
                         alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
                 </a>
                 <h2><a href="articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o hace bien
