--- a/novDePC/articulo1.html
+++ b/novDePC/articulo1.html
@@ -31,7 +31,7 @@
                 mods de la
                 comunidad.</h3>
             <br>
-            <a href="images/art1 presentacion.jpg"><img src="images/art1 presentacion.jpg" width="1000" height="500"
+            <a href="images/art1 presentacion.jpg"><img src="images/art1 presentacion.jpg" width="100%" height="500"
                     alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor de los Anillos">
             </a>
             <p class="cuerpo">
@@ -75,7 +75,7 @@
             </p>
             <p class="cuerpo">
                 <br>
-                <iframe width="1000" height="500" src="https://www.youtube.com/embed/duej-DEcYkM"
+                <iframe width="100%" height="500" src="https://www.youtube.com/embed/duej-DEcYkM"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
@@ -124,7 +124,7 @@
             </p>
             <p class="cuerpo">
                 <br>
-                <iframe width="1000" height="500" src="https://www.youtube.com/embed/ndZ2UGv6REs"
+                <iframe width="100%" height="500" src="https://www.youtube.com/embed/ndZ2UGv6REs"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
@@ -155,7 +155,7 @@
             </p>
             <p class="cuerpo">
                 <br>
-                <a href="images/art1 Amon Sul.jpg"><img src="images/art1 Amon Sul.jpg" width="1000" height="500"
+                <a href="images/art1 Amon Sul.jpg"><img src="images/art1 Amon Sul.jpg" width="100%" height="500"
                         alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor de los Anillos">
                 </a>
             </p>
@@ -186,7 +186,7 @@
             </p>
             <p>
                 <br>
-                <iframe width="1000" height="500" src="https://www.youtube.com/embed/2UTL6U4lWDo"
+                <iframe width="100%" height="500" src="https://www.youtube.com/embed/2UTL6U4lWDo"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
@@ -229,7 +229,7 @@
             </p>
             <p class="cuerpo">
                 <br>
-                <a href="images/art1 criaturas.jpg"><img src="images/art1 criaturas.jpg" width="1000" height="500"
+                <a href="images/art1 criaturas.jpg"><img src="images/art1 criaturas.jpg" width="100%" height="500"
                         alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor de los Anillos">
                 </a>
             </p>
@@ -382,7 +382,7 @@
             <p class="cuepro">
             <article class="article">
                 <a href="articulo1.html">
-                    <img src="images/art1 presentacion.jpg" width="250" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+                    <img src="images/art1 presentacion.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
                                 			                                        de los
                                 			                                        Anillos">
                 </a>
@@ -398,7 +398,7 @@
             </p>
             <p class="cuerpo">
             <article class="article"><a href="articulo2.html">
-                    <img src="images/art2 twitch.jpg" width="250" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+                    <img src="images/art2 twitch.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
                                         					                			                                        de los
                                         					                			                                        Anillos">
                 </a>
@@ -410,7 +410,7 @@
             </p>
             <p class="cuerpo">
             <article class="article"><a href="../novDeConsolas/articulo1.html">
-                    <img src="../novDeConsolas/images/art1 presentacion.jpg" width="250" height="200"
+                    <img src="../novDeConsolas/images/art1 presentacion.jpg" width="100%" height="200"
                         alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
                 </a>
                 <h2><a href="../novDeConsolas/articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o hace bien
