--- a/novDePC/articulo2.html
+++ b/novDePC/articulo2.html
@@ -28,7 +28,7 @@
                     <br>
                 <h3 class="subtitulo">Si estáis intentando acceder a Twitch y no sois capaces, un problema con las operadoras parece ser la causa.</h3>
                 <br>
-                <a href="images/art2 presentacion.jpg"><img src="images/art2 presentacion.jpg" width="1000" height="500"
+                <a href="images/art2 presentacion.jpg"><img src="images/art2 presentacion.jpg" width="100%" height="500"
                         alt="¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming">
                 </a>
                 <p class="cuerpo">
@@ -55,7 +55,7 @@
                 </p>
                 <p class="cuerpo">
                     <br>
-                    <img src="images/art2 twitch.jpg" width="1000" height="500" alt="¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming">
+                    <img src="images/art2 twitch.jpg" width="100%" height="500" alt="¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming">
                 </p>
                 <p class="cuerpo">
                     <br>
@@ -102,7 +102,7 @@
             <p class="cuepro">
             <article class="article">
                 <a href="articulo1.html">
-                    <img src="images/art1 presentacion.jpg" width="250" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+                    <img src="images/art1 presentacion.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
                         			                                        de los
                         			                                        Anillos">
                 </a>
@@ -118,7 +118,7 @@
             </p>
             <p class="cuerpo">
             <article class="article"><a href="articulo2.html">
-                    <img src="images/art2 twitch.jpg" width="250" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+                    <img src="images/art2 twitch.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
                                 					                			                                        de los
                                 					                			                                        Anillos">
                 </a>
@@ -130,7 +130,7 @@
             </p>
             <p class="cuerpo">
             <article class="article"><a href="../novDeConsolas/articulo1.html">
-                    <img src="../novDeConsolas/images/art1 presentacion.jpg" width="250" height="200"
+                    <img src="../novDeConsolas/images/art1 presentacion.jpg" width="100%" height="200"
                         alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
                 </a>
                 <h2><a href="../novDeConsolas/articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o hace bien
