--- a/novDePC/novDePC.html
+++ b/novDePC/novDePC.html
@@ -106,7 +106,7 @@
                <p class="cuerpo">
             <article class="article">
                 <a href="articulo1.html">
-                    <img src="images/art1 presentacion.jpg" width="250" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+                    <img src="images/art1 presentacion.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
             		                			                                        de los
             		                			                                        Anillos">
                 </a>
@@ -121,7 +121,7 @@
             </p>
             <p class="cuerpo">
             <article class="article"><a href="articulo2.html">
-                    <img src="images/art2 twitch.jpg" width="250" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+                    <img src="images/art2 twitch.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
             					                			                                        de los
             					                			                                        Anillos">
                 </a>
@@ -133,7 +133,7 @@
             </p>
             <p class="cuerpo">
             <article class="article"><a href="../novDeConsolas/articulo1.html">
-                    <img src="../novDeConsolas/images/art1 presentacion.jpg" width="250" height="200"
+                    <img src="../novDeConsolas/images/art1 presentacion.jpg" width="100%" height="200"
                         alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
                 </a>
                 <h2><a href="../novDeConsolas/articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o hace bien
