--- a/novDeConsolas/articulo1.html
+++ b/novDeConsolas/articulo1.html
@@ -28,7 +28,7 @@
             <br>
             <h3 class="subtitulo">Abrimos el debate entre los lectores de 3DJuegos, ahora que acaba de estrenarse Resident Evil 8 Village.</h3>
             <br>
-            <iframe src="https://www.3djuegos.com/player/embed.php?id_video=53030" width="983" height="552" frameborder="0"
+            <iframe src="https://www.3djuegos.com/player/embed.php?id_video=53030" width="100%" height="552" frameborder="0"
                 allowfullscreen="true"></iframe>
                 <br>
                 <a href="https://www.3djuegos.com/36952/resident-evil-8-village/">Resident Evil 8
@@ -52,7 +52,7 @@
             </p>
             <p class="cuerpo">
                 <br>
-                <img src="images/art1 presentacion.jpg" width="1000" height="500" alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
+                <img src="images/art1 presentacion.jpg" width="100%" height="500" alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
             </p>
             <p class="cuerpo">
                 <br>
@@ -102,7 +102,7 @@
             </p>
             <article class="article">
                 <a href="../novDePC/articulo1.html">
-                    <img src="../novDePC/images/art1 presentacion.jpg" width="250" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
+                    <img src="../novDePC/images/art1 presentacion.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
                         			                                        de los
                         			                                        Anillos">
                 </a>
@@ -117,7 +117,7 @@
                 </p>
             </article>
             <article class="article"><a href="../novDePC/articulo2.html">
-                    <img src="../novDePC/images/art2 twitch.jpg" width="250" height="200" alt="¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming">
+                    <img src="../novDePC/images/art2 twitch.jpg" width="100%" height="200" alt="¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming">
                 </a>
                 <h2><a href="../novDePC/articulo2.html">PC: ¿Por qué no funciona Twitch? Algunos usuarios no
                         pueden acceder a la plataforma de streaming</a></h2>
@@ -126,7 +126,7 @@
                 </p>
             </article>
             <article class="article"><a href="articulo1.html">
-                    <img src="images/art1 presentacion.jpg" width="250" height="200" alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
+                    <img src="images/art1 presentacion.jpg" width="100%" height="200" alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
                 </a>
                 <h2><a href="articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?</a></h2>
                 <br>
