--- a/novDeConsolas/novDeConsolas.html
+++ b/novDeConsolas/novDeConsolas.html
@@ -100,7 +100,15 @@
                         apoyándose en la
                         acción?</a></h2>
                 <br>
-                Fecha: 13/05/2021
+                Fecha: 19/05/2021
+            </article>
+            <article class="article"><a href="articulo2.html">
+                    <img src="images/art2 borderland.jpg" width="100%" height="200"
+                        alt="BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo juego que llegará antes de abril de 2022">
+                </a>
+                <h2><a href="articulo2.html">BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo juego que llegará antes de abril de 2022</a></h2>
+                <br>
+                Fecha: 19/05/2021
             </article>
             </p>
         </aside>
