--- a/novDeConsolas/novDeConsolas.html
+++ b/novDeConsolas/novDeConsolas.html
@@ -43,17 +43,14 @@
                     Fecha: 13/05/2021
                 </p>
             </article>
-            <article class="article">
-                <h2>Titulo del articulo2</h2>
-                <p>Texto del articulo2</p>
-            </article>
-            <article class="article">
-                <h2>Titulo del articulo3</h2>
-                <p>Texto del articulo3</p>
-            </article>
-            <article class="article">
-                <h2>Titulo del articulo4</h2>
-                <p>Texto del articulo4</p>
+            <article class="article"><a href="articulo2.html">
+                    <img src="images/art2 borderland.jpg" width="100%" height="200"
+                        alt="BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo juego que llegará antes de abril de 2022">
+                </a>
+                <h2><a href="articulo2.html">BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo juego que
+                        llegará antes de abril de 2022</a></h2>
+                <br>
+                Fecha: 19/05/2021
             </article>
         </section>
         <aside>
@@ -99,14 +96,6 @@
                 <h2><a href="articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o hace bien
                         apoyándose en la
                         acción?</a></h2>
-                <br>
-                Fecha: 19/05/2021
-            </article>
-            <article class="article"><a href="articulo2.html">
-                    <img src="images/art2 borderland.jpg" width="100%" height="200"
-                        alt="BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo juego que llegará antes de abril de 2022">
-                </a>
-                <h2><a href="articulo2.html">BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo juego que llegará antes de abril de 2022</a></h2>
                 <br>
                 Fecha: 19/05/2021
             </article>
