--- a/novDeConsolas/novDeConsolas.html
+++ b/novDeConsolas/novDeConsolas.html
@@ -126,6 +126,7 @@
                 <br>
                 Fecha: 19/05/2021
             </article>
+            <p class="cuerpo">
             <article class="article"><a href="articulo2.html">
                     <img src="images/art2 borderland.jpg" width="100%" height="200"
                         alt="BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo juego que llegará antes de abril de 2022">
