Actualizacion de todos los archivos
Se les agrego el codigo para mostrar el segundo articulo de novedades de consolas

--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -86,6 +86,18 @@
                 Fecha: 13/05/2021
             </article>
             </p>
+            <p class="cuerpo">
+            <article class="article"><a href="../novDeConsolas/articulo2.html">
+                    <img src="../novDeConsolas/images/art2 borderland.jpg" width="100%" height="200"
+                        alt="BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo juego que llegará antes de abril de 2022">
+                </a>
+                <h2><a href="../novDeConsolas/articulo2.html">BORDERLANDS 3: Los creadores de Borderlands están trabajando en un
+                        nuevo
+                        juego que llegará antes de abril de 2022</a></h2>
+                <br>
+                Fecha: 19/05/2021
+            </article>
+            </p>
         </aside>
         <div class="clear"></div>
         <footer>
