--- a/index.html
+++ b/index.html
@@ -89,12 +89,59 @@
 				</p>
 			</article>
 			<article class="article">
-				<h2>Titulo del articulo3</h2>
-				<p>Texto del articulo3</p>
+				<table>
+					<tr>
+						<th rowspan="2"><a href="novDeConsolas/articulo1.html">
+								<img src="novDeConsolas/images/art1 presentacion.jpg" width="80" height="80"
+									alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
+							</a></th>
+					</tr>
+					<tr>
+						<td>
+							<h2 class="titulo"><a href="novDeConsolas/articulo1.html">¿Debe Resident Evil apostar más por el terror o
+									hace bien apoyándose en la acción?</a></h2>
+							<h3 class="subtitulo">Abrimos el debate entre los lectores de 3DJuegos, ahora que acaba de
+								estrenarse Resident Evil 8 Village.</h3>
+						</td>
+					</tr>
+				</table>
+				<p class="cuerpo">Hace apenas unos días el productor de Resident Evil 8 Village aseguró que este nuevo
+					episodio de la saga de terror de
+					Capcom daría "menos miedo" que Resident Evil 7, afirmando que muchos jugadores destacaron que este
+					primer juego en
+					primera persona era demasiado aterrador.
+					<br>
+					Fecha: 13/05/2021
+				</p>
 			</article>
 			<article class="article">
-				<h2>Titulo del articulo4</h2>
-				<p>Texto del articulo4</p>
+				<table>
+					<tr>
+						<th rowspan="2"><a href="novDeConsolas/articulo2.html">
+								<img src="novDeConsolas/images/art2 borderland.jpg" width="80" height="80" alt="BORDERLANDS 3: Los creadores de Borderlands
+			                                    están trabajando en un nuevo juego que llegará antes de abril de 2022">
+							</a></th>
+					</tr>
+					<tr>
+						<td>
+							<h2 class="titulo"><a href="novDeConsolas/articulo2.html">BORDERLANDS 3: Los creadores de Borderlands
+									están trabajando en un nuevo juego que llegará antes de abril de 2022</a></h2>
+							<h3 class="subtitulo">Los informes financieros de Take-Two mencionan un desarrollo de
+								Gearbox antes de que acabe el nuevo año fiscal.</h3>
+						</td>
+					</tr>
+				</table>
+				<p class="cuerpo">Take-Two ha publicado recientemente sus datos financieros, y este tipo de informes,
+					además de números interesantes,
+					suelen dejar pistas sobre los planes futuros de la empresa matriz de 2K Games o Rockstar. Destacan
+					los ambiciosos
+					planes
+					de la compañía, que ha manifestado la intención de publicar
+					más de 60 juegos en los próximos 3 años. Aunque no sabemos si GTA 6 estará entre ellos, lo que sí
+					está claro es que Gearbox Software, padres de la saga Borderlands, quieren iniciar un nuevo camino.
+					<br>
+					Fecha: 19/05/2021
+				</p>
 			</article>
 		</section>
 		<aside>
@@ -142,6 +189,18 @@
 						acción?</a></h2>
 				<br>
 				Fecha: 13/05/2021
+			</article>
+			</p>
+			<p class="cuerpo">
+			<article class="article"><a href="../novDeConsolas/articulo2.html">
+					<img src="novDeConsolas/images/art2 borderland.jpg" width="100%" height="200"
+						alt="BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo juego que llegará antes de abril de 2022">
+				</a>
+				<h2><a href="../novDeConsolas/articulo2.html">BORDERLANDS 3: Los creadores de Borderlands están trabajando en un
+						nuevo
+						juego que llegará antes de abril de 2022</a></h2>
+				<br>
+				Fecha: 19/05/2021
 			</article>
 			</p>
 		</aside>
