--- a/novDePC/novDePC.html
+++ b/novDePC/novDePC.html
@@ -86,14 +86,6 @@
                     Fecha: 13/05/2021
                 </p>
             </article>
-            <article class="article">
-                <h2>Titulo del articulo3</h2>
-                <p>Texto del articulo3</p>
-            </article>
-            <article class="article">
-                <h2>Titulo del articulo4</h2>
-                <p>Texto del articulo4</p>
-            </article>
         </section>
         <aside>
             <h1>¿Que buscas?</h1>
@@ -101,9 +93,9 @@
                 <input type="text" />
                 <input type="submit" value="buscar" />
             </form>
-                <br>
-               <h2>Noticias:</h2>
-               <p class="cuerpo">
+            <br>
+            <h2>Noticias:</h2>
+            <p class="cuerpo">
             <article class="article">
                 <a href="articulo1.html">
                     <img src="images/art1 presentacion.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
@@ -121,9 +113,8 @@
             </p>
             <p class="cuerpo">
             <article class="article"><a href="articulo2.html">
-                    <img src="images/art2 twitch.jpg" width="100%" height="200" alt="Estos son los mods que necesitas para convertir Skyrim en la Tierra Media de El Señor
-            					                			                                        de los
-            					                			                                        Anillos">
+                    <img src="images/art2 twitch.jpg" width="100%" height="200" alt="¿Por qué no funciona Twitch? Algunos usuarios no
+                        pueden acceder a la plataforma de streaming">
                 </a>
                 <h2 class="titulo"><a href="articulo2.html">¿Por qué no funciona Twitch? Algunos usuarios no
                         pueden acceder a la plataforma de streaming</a></h2>
@@ -136,12 +127,23 @@
                     <img src="../novDeConsolas/images/art1 presentacion.jpg" width="100%" height="200"
                         alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
                 </a>
-                <h2><a href="../novDeConsolas/articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o hace bien
+                <h2><a href="../novDeConsolas/articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o
+                        hace bien
                         apoyándose en la
                         acción?</a></h2>
                 <br>
                 Fecha: 13/05/2021
-                </p>
+            </article>
+            </p>
+            <p class="cuerpo">
+            <article class="article"><a href="../novDeConsolas/articulo2.html">
+                    <img src="../novDeConsolas/images/art2 borderland.jpg" width="100%" height="200"
+                        alt="BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo juego que llegará antes de abril de 2022">
+                </a>
+                <h2><a href="../novDeConsolas/articulo2.html">BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo
+                        juego que llegará antes de abril de 2022</a></h2>
+                <br>
+                Fecha: 19/05/2021
             </article>
             </p>
         </aside>
