--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<title>El blog de Feze</title>
 	<link rel="stylesheet" href="css/index.css">
+	<!--<link rel="stylesheet" href="css/carrusel 3D.css">-->
 </head>
 
 <body>
@@ -143,14 +144,16 @@
 					Fecha: 19/05/2021
 				</p>
 			</article>
+			<div class="Carrusel">
+				<div class="contenido-del-carrusel">
+					<figure><a href="index.html"><img src="images/carr-index2.jpg"></a></figure>
+					<figure><a href="novDePC/novDePC.html"><img src="images/carr-novsobrepc.jpg"></a></figure>
+					<figure><a href="novDeConsolas/novDeConsolas.html"><img src="images/carr-novsobrecons.jpg"></a></figure>
+					<figure><a href="contacto/contacto.html"><img src="images/carr-contacto.jpg"></a></figure>
+				</div>
+			</div>
 		</section>
 		<aside>
-			<h1>¿Que buscas?</h1>
-			<form action="">
-				<input type="text" />
-				<input type="submit" value="buscar" />
-			</form>
-			<br>
 			<h2>Noticias:</h2>
 			<p class="cuerpo">
 			<article class="article"><a href="novDePC/articulo1.html">
