--- a/novDeConsolas/articulo1.html
+++ b/novDeConsolas/articulo1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>El blog de Feze</title>
-    <link rel="stylesheet" href="css/articulo.css" />
+    <link rel="stylesheet" href="../css/index.css" />
 </head>
 
 <body>
@@ -90,14 +90,16 @@
                 <br>
                 Fecha: 13/05/2021
             </p>
+            <div class="Carrusel">
+                <div class="contenido-del-carrusel">
+                    <figure><a href="../index.html"><img src="../images/carr-index2.jpg"></a></figure>
+                    <figure><a href="../novDePC/novDePC.html"><img src="../images/carr-novsobrepc.jpg"></a></figure>
+                    <figure><a href="../novDeConsolas/novDeConsolas.html"><img src="../images/carr-novsobrecons.jpg"></a></figure>
+                    <figure><a href="../contacto/contacto.html"><img src="../images/carr-contacto.jpg"></a></figure>
+                </div>
+            </div>
         </section>
         <aside>
-            <h1>¿Que buscas?</h1>
-            <form action="">
-                <input type="text" />
-                <input type="submit" value="buscar" />
-            </form>
-            <br>
             <h2>Noticias:</h2>
             </p>
             <article class="article">
