--- a/novDePC/articulo2.html
+++ b/novDePC/articulo2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>El blog de Feze</title>
-    <link rel="stylesheet" href="css/articulo1.css" />
+    <link rel="stylesheet" href="../css/index.css" />
 </head>
 
 <body>
@@ -23,81 +23,105 @@
         </nav>
         <div class="clear"></div>
         <section id="contenido">
-                <h2 class="titulo">
-                    ¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming</h2>
-                    <br>
-                <h3 class="subtitulo">Si estáis intentando acceder a Twitch y no sois capaces, un problema con las operadoras parece ser la causa.</h3>
+            <h2 class="titulo">
+                ¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming</h2>
+            <br>
+            <h3 class="subtitulo">Si estáis intentando acceder a Twitch y no sois capaces, un problema con las
+                operadoras parece ser la causa.</h3>
+            <br>
+            <a href="images/art2 presentacion.jpg"><img src="images/art2 presentacion.jpg" width="100%" height="500"
+                    alt="¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming">
+            </a>
+            <p class="cuerpo">
                 <br>
-                <a href="images/art2 presentacion.jpg"><img src="images/art2 presentacion.jpg" width="100%" height="500"
-                        alt="¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming">
-                </a>
-                <p class="cuerpo">
-                    <br>
-                    <b>Actualización</b>: <a href="https://www.twitch.tv" target="_blank">Twitch</a> ha confirmado que están investigando los problemas de conexión que está habiendo en España con la
-                    plataforma. Además, los compañeros de Xataka apuntan a que les confirman que las operadoras han bloqueado Twitch tras
-                    una solicitud de Telefónica Audivisual, "que ha solicitado por error". El servicio ya se ha restaurado en algunas
-                    operadoras como Vodafone.
-                </p>
-                <p class="cuerpo">
-                    <br>
-                    <b>Noticia original</b>: Todavía hay mucha confusión al respecto, pero <b>Twitch</b>, la plataforma de streaming más popular en todo el
-                    mundo, está dando problemas de conexión <b>a muchos usuarios</b> en el momento de redacción de esta noticia. Al parecer, en
-                    función de la operadora con la que tengáis contratado el acceso a internet, puede que os funcione sin problemas o que os
-                    aparezca el <b>Error 2000</b>. Este fallo aparece apenas entrar en cualquiera de los streamings; aunque podéis navegar por la
-                    web sin problemas.
-                </p>
-                <p class="cuerpo">
-                    <br>
-                    Varios streamers de éxito, como el humorista Ángel Martín <a href="https://twitter.com/angelmartin_nc/status/1392849102623346688">se han hecho eco</a> de los problemas que está dando Twitch en
-                    estos instantes. Según indican diversas fuentes, buena parte de las operadoras de España han bloqueado los dominios
-                    correspondientes a los <b>servidores de Twitch (ttvnw.net)</b> debido a una <b>orden judicial</b>. Esto podría deberse a la emisión de
-                    denuncias por subir contenidos con copyright pero, como decimos, de momento las causas no están concretadas.
-                </p>
-                <p class="cuerpo">
-                    <br>
-                    <img src="images/art2 twitch.jpg" width="100%" height="500" alt="¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming">
-                </p>
-                <p class="cuerpo">
-                    <br>
-                Se trata de <b>un problema local en España</b>, que tiene que ver con legislaciones y sentencias judiciales, pero no sabemos si
-                se extenderá en el tiempo o se trata de algo puntual. En foros y redes sociales están dando soluciones para poder
-                disfrutar de la plataforma sin problemas, <b>creando puntos de acceso VPN para "engañar"</b> a la conexión. También está dando
+                <b>Actualización</b>: <a href="https://www.twitch.tv" target="_blank">Twitch</a> ha confirmado que están
+                investigando los problemas de conexión que está habiendo en España con la
+                plataforma. Además, los compañeros de Xataka apuntan a que les confirman que las operadoras han
+                bloqueado Twitch tras
+                una solicitud de Telefónica Audivisual, "que ha solicitado por error". El servicio ya se ha restaurado
+                en algunas
+                operadoras como Vodafone.
+            </p>
+            <p class="cuerpo">
+                <br>
+                <b>Noticia original</b>: Todavía hay mucha confusión al respecto, pero <b>Twitch</b>, la plataforma de
+                streaming más popular en todo el
+                mundo, está dando problemas de conexión <b>a muchos usuarios</b> en el momento de redacción de esta
+                noticia. Al parecer, en
+                función de la operadora con la que tengáis contratado el acceso a internet, puede que os funcione sin
+                problemas o que os
+                aparezca el <b>Error 2000</b>. Este fallo aparece apenas entrar en cualquiera de los streamings; aunque
+                podéis navegar por la
+                web sin problemas.
+            </p>
+            <p class="cuerpo">
+                <br>
+                Varios streamers de éxito, como el humorista Ángel Martín <a
+                    href="https://twitter.com/angelmartin_nc/status/1392849102623346688">se han hecho eco</a> de los
+                problemas que está dando Twitch en
+                estos instantes. Según indican diversas fuentes, buena parte de las operadoras de España han bloqueado
+                los dominios
+                correspondientes a los <b>servidores de Twitch (ttvnw.net)</b> debido a una <b>orden judicial</b>. Esto
+                podría deberse a la emisión de
+                denuncias por subir contenidos con copyright pero, como decimos, de momento las causas no están
+                concretadas.
+            </p>
+            <p class="cuerpo">
+                <br>
+                <img src="images/art2 twitch.jpg" width="100%" height="500"
+                    alt="¿Por qué no funciona Twitch? Algunos usuarios no pueden acceder a la plataforma de streaming">
+            </p>
+            <p class="cuerpo">
+                <br>
+                Se trata de <b>un problema local en España</b>, que tiene que ver con legislaciones y sentencias
+                judiciales, pero no sabemos si
+                se extenderá en el tiempo o se trata de algo puntual. En foros y redes sociales están dando soluciones
+                para poder
+                disfrutar de la plataforma sin problemas, <b>creando puntos de acceso VPN para "engañar"</b> a la
+                conexión. También está dando
                 errores en la aplicación móvil o en las de consolas como PS5 y Xbox Series X|S.
-                </p>
-                <p class="cuerpo">
-                    <br>
-                Como decimos, depende de la operadora que tengáis contratada, os puede surgir este problema o no. También puede influir
-                el navegador que estéis utilizando. De momento, <b>desde Twitch no han dado detalles</b> al respecto de lo que está ocurriendo,
-                por lo que estaremos atentos a ver qué es lo que ocurre durante las próximas horas con respecto a esta caída en la
+            </p>
+            <p class="cuerpo">
+                <br>
+                Como decimos, depende de la operadora que tengáis contratada, os puede surgir este problema o no.
+                También puede influir
+                el navegador que estéis utilizando. De momento, <b>desde Twitch no han dado detalles</b> al respecto de
+                lo que está ocurriendo,
+                por lo que estaremos atentos a ver qué es lo que ocurre durante las próximas horas con respecto a esta
+                caída en la
                 plataforma que está causando mucha confusión entre los millones de usuarios de la plataforma.
+            </p>
+            <p class="cuerpo">
+                <br>
+            <h5>Más sobre: <a href="https://www.twitch.tv">Twitch</a></h5>
+            </p>
+            <p class="cuerpo">
+                <br>
+            <h3>
+                <p>Fuente: 3DJuegos. </p>
+                <br>
+                <p>
+                    Link: <a
+                        href="https://www.3djuegos.com/noticias-ver/213679/por-que-no-funciona-twitch-algunos-usuarios-no-pueden/"
+                        target="_blank">https://www.3djuegos.com/noticias-ver/213679/por-que-no-funciona-twitch-algunos-usuarios-no-pueden/</a>
                 </p>
-                <p class="cuerpo">
-                    <br>
-                  <h5>Más sobre: <a href="https://www.twitch.tv">Twitch</a></h5>
-                </p>
-                <p class="cuerpo">
-                    <br>
-                <h3>
-                    <p>Fuente: 3DJuegos. </p>
-                    <br>
-                    <p>
-                      Link: <a href="https://www.3djuegos.com/noticias-ver/213679/por-que-no-funciona-twitch-algunos-usuarios-no-pueden/"
-                            target="_blank">https://www.3djuegos.com/noticias-ver/213679/por-que-no-funciona-twitch-algunos-usuarios-no-pueden/</a>
-                    </p>
-                </h3>
-                </p>
-                <p class="cuerpo">
-                    <br>
-                    Fecha: 13/05/2021
-                </p>
+            </h3>
+            </p>
+            <p class="cuerpo">
+                <br>
+                Fecha: 13/05/2021
+            </p>
+            <div class="Carrusel">
+                <div class="contenido-del-carrusel">
+                    <figure><a href="../index.html"><img src="../images/carr-index2.jpg"></a></figure>
+                    <figure><a href="../novDePC/novDePC.html"><img src="../images/carr-novsobrepc.jpg"></a></figure>
+                    <figure><a href="../novDeConsolas/novDeConsolas.html"><img src="../images/carr-novsobrecons.jpg"></a>
+                    </figure>
+                    <figure><a href="../contacto/contacto.html"><img src="../images/carr-contacto.jpg"></a></figure>
+                </div>
+            </div>
         </section>
         <aside>
-            <h1>¿Que buscas?</h1>
-            <form action="">
-                <input type="text" />
-                <input type="submit" value="buscar" />
-            </form>
-                <br>
             <h2>Noticias:</h2>
             <p class="cuepro">
             <article class="article">
@@ -133,7 +157,8 @@
                     <img src="../novDeConsolas/images/art1 presentacion.jpg" width="100%" height="200"
                         alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
                 </a>
-                <h2><a href="../novDeConsolas/articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o hace bien
+                <h2><a href="../novDeConsolas/articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o
+                        hace bien
                         apoyándose en la
                         acción?</a></h2>
                 <br>
