--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>El blog de Feze</title>
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="css/index.css" />
 </head>
 
 <body>
@@ -16,36 +16,161 @@
             <ul>
                 <li><a href="../index.html" title="Principal">Principal</a></li>
                 <li><a href="../novDePC/novDePC.html" title="Novedades sobre PC">Novedades sobre PC</a></li>
-                <li><a href="../novDeConsolas/novDeConsolas.html" title="Novedades sobre consolas">Novedades sobre consolas</a></li>
+                <li><a href="../novDeConsolas/novDeConsolas.html" title="Novedades sobre consolas">Novedades sobre
+                        consolas</a></li>
                 <li><a href="contacto.html" title="Contacto">Contacto</a></li>
             </ul>
         </nav>
-        <div class="clear"></div>
-        <section id="contenido">
-            <article class="article">
-                <h2>Titulo del articulo1</h2>
-                <p>Texto del articulo1</p>
-            </article>
-            <article class="article">
-                <h2>Titulo del articulo2</h2>
-                <p>Texto del articulo2</p>
-            </article>
-            <article class="article">
-                <h2>Titulo del articulo3</h2>
-                <p>Texto del articulo3</p>
-            </article>
-            <article class="article">
-                <h2>Titulo del articulo4</h2>
-                <p>Texto del articulo4</p>
-            </article>
+        <h1>Formulario</h1>
+        <div id="cuerpo">
+            <form name="formulario" onsubmit="return enviar(event)">
+                <ul>
+                    <li>
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" id="nombre" name="nombre" onfocus="return enviadoN()" maxlength="30"
+                            onkeypress="return enviarConEnter(event)" placeholder="Nombre">
+                    </li>
+                    <li>
+                        <label for="E-mail">E-mail:</label>
+                        <input type="mail" id="email" name="email" onfocus="return enviadoEm()" maxlength="20"
+                            onkeypress="return enviarConEnter(event)" placeholder="E-mail">
+                    </li>
+                    <li>
+                        <label for="mensaje">Mensaje:</label>
+                        <textarea id="mensaje" name="mensaje" onfocus="return enviadoM()" maxlength="200"
+                            onkeypress="return enviarConEnter(event)" placeholder="Mensaje"></textarea>
+                    </li>
+                    <li class="button">
+                        <input type="submit" value="Envie su mensaje"></input>
+                    </li>
+                </ul>
+            </form>
+            <div>
+                <ol id="error">
+
+                </ol>
+            </div>
+            <div>
+                <ol id="correcto">
+            
+                </ol>
+            </div>
+        </div>
+
+
+        <script>
+            function errorNombre() {
+                document.getElementById("nombre").style.backgroundColor = "red";
+            }
+
+            function errorEmail() {
+                document.getElementById("email").style.backgroundColor = "red";
+            }
+
+            function errorMensaje() {
+                document.getElementById("mensaje").style.backgroundColor = "red";
+            }
+
+            function enviadoN() {
+                document.getElementById("nombre").style.backgroundColor = "white";
+            }
+
+            function enviadoEm() {
+                document.getElementById("email").style.backgroundColor = "white";
+            }
+
+            function enviadoM() {
+                document.getElementById("mensaje").style.backgroundColor = "white";
+            }
+
+            function enviarConEnter(event) {
+                if (event.keyCode == 13 && !event.shiftKey) {
+                    enviar();
+                    event.preventDefault();
+                }
+            }
+
+            function enviar(e) {
+                e.preventDefault();
+                document.getElementById("error").innerHTML = "";
+                var errorConNombre = document.createElement("li");
+                var errorConEmail = document.createElement("li");
+                var errorConMensaje = document.createElement("li");
+                var enviadoConNombre = document.createElement("li");
+                var enviadoConEmail = document.createElement("li");
+                var enviadoConMensaje = document.createElement("li");
+                if (!(validarNombre(nombre.value)) || nombre.value == "") {
+                    errorConNombre.innerText = "El nombre debe contener un texto sin numeros.";
+                    errorNombre();
+                    nombre.value = "";
+                    document.querySelector("div#error").appendChild(errorConNombre);
+                }
+                if (nombre.value.length > 30) {
+                    errorConNombre.innerText = "El nombre no debe contener más de 30 caracteres.";
+                    errorNombre();
+                    nombre.value = "";
+                    document.querySelector("div#error").appendChild(errorConNombre);
+                }
+                if (email.value.length == 0) {
+                    errorConEmail.innerText = "Debe ingresar un email de no más de 20 caracteres y debe contener un @.";
+                    errorEmail();
+                    email.value = "";
+                    document.querySelector("div#error").appendChild(errorConEmail);
+                }
+                if (email.value.length > 20) {
+                    errorConEmail.innerText = "El email no debe contener más de 20 caracteres y debe contener un @.";
+                    errorEmail();
+                    email.value = "";
+                    document.querySelector("div#error").appendChild(errorConEmail);
+                }
+                if (mensaje.value.length > 200) {
+                    errorConMensaje.innerText = "El mensaje no debe contener más de 200 caracteres.";
+                    errorMensaje();
+                    mensaje.value = "";
+                    document.querySelector("div#error").appendChild(errorConMensaje);
+                }
+                if (mensaje.value.length < 1) {
+                    errorConMensaje.innerText = "La casilla de mensaje esta vacia.";
+                    errorMensaje();
+                    document.querySelector("div#error").appendChild(errorConMensaje);
+                } else {
+                    enviadoN();
+                    enviadoEm();
+                    enviadoM();
+                    enviadoConNombre.innerText = nombre.value;
+                    enviadoConEmail.innerText = email.value;
+                    enviadoConMensaje.innerText = mensaje.value;
+                    mensaje.focus();
+                    document.querySelector("#correcto").appendChild(enviadoConNombre);
+                    document.querySelector("#correcto").appendChild(enviadoConEmail);
+                    document.querySelector("#correcto").appendChild(enviadoConMensaje);
+                    alert("Mensaje enviado");
+                }
+                return false;
+            }
+
+            function validarNombre(nombre) {
+                for (i = 0; i < nombre.length; i++) {
+                    if (!(nombre.charCodeAt(i) >= 65 && nombre.charCodeAt(i) <= 90 ||
+                        nombre.charCodeAt(i) >= 97 && nombre.charCodeAt(i) <= 122 ||
+                        nombre.charCodeAt(i) == 32)) {
+                        return false;
+                    }
+                }
+                return true;
+            }
+        </script>
+        <div class="Carrusel">
+            <div class="contenido-del-carrusel">
+                <figure><a href="../index.html"><img src="../images/carr-index2.jpg"></a></figure>
+                <figure><a href="../novDePC/novDePC.html"><img src="../images/carr-novsobrepc.jpg"></a></figure>
+                <figure><a href="../novDeConsolas/novDeConsolas.html"><img src="../images/carr-novsobrecons.jpg"></a>
+                </figure>
+                <figure><a href="contacto.html"><img src="../images/carr-contacto.jpg"></a></figure>
+            </div>
+        </div>
         </section>
         <aside>
-            <h1>¿Que buscas?</h1>
-            <form action="">
-                <input type="text" />
-                <input type="submit" value="buscar" />
-            </form>
-            <br>
             <h2>Noticias:</h2>
             <p class="cuerpo">
             <article class="article">
@@ -54,7 +179,8 @@
                     		                			                                        de los
                     		                			                                        Anillos">
                 </a>
-                <h2 class="titulo"><a href="../novDePC/articulo1.html">Estos son los mods que necesitas para convertir
+                <h2 class="titulo"><a href="../novDePC/articulo1.html">Estos son los mods que necesitas para
+                        convertir
                         Skyrim en la
                         Tierra Media de El Señor
                         de los
@@ -69,7 +195,8 @@
                     					                			                                        de los
                     					                			                                        Anillos">
                 </a>
-                <h2 class="titulo"><a href="../novDePC/articulo2.html">¿Por qué no funciona Twitch? Algunos usuarios no
+                <h2 class="titulo"><a href="../novDePC/articulo2.html">¿Por qué no funciona Twitch? Algunos usuarios
+                        no
                         pueden acceder a la plataforma de streaming</a></h2>
                 <br>
                 Fecha: 13/05/2021
@@ -79,7 +206,8 @@
                     <img src="../novDeConsolas/images/art1 presentacion.jpg" width="100%" height="200"
                         alt="¿Debe Resident Evil apostar más por el terror o hace bien apoyándose en la acción?">
                 </a>
-                <h2><a href="../novDeConsolas/articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror o hace bien
+                <h2><a href="../novDeConsolas/articulo1.html">Consola: ¿Debe Resident Evil apostar más por el terror
+                        o hace bien
                         apoyándose en la
                         acción?</a></h2>
                 <br>
@@ -91,7 +219,8 @@
                     <img src="../novDeConsolas/images/art2 borderland.jpg" width="100%" height="200"
                         alt="BORDERLANDS 3: Los creadores de Borderlands están trabajando en un nuevo juego que llegará antes de abril de 2022">
                 </a>
-                <h2><a href="../novDeConsolas/articulo2.html">BORDERLANDS 3: Los creadores de Borderlands están trabajando en un
+                <h2><a href="../novDeConsolas/articulo2.html">BORDERLANDS 3: Los creadores de Borderlands están
+                        trabajando en un
                         nuevo
                         juego que llegará antes de abril de 2022</a></h2>
                 <br>
