--- a/novDePC/novDePC.html
+++ b/novDePC/novDePC.html
@@ -86,14 +86,16 @@
                     Fecha: 13/05/2021
                 </p>
             </article>
+            <div class="Carrusel">
+                <div class="contenido-del-carrusel">
+                    <figure><a href="../index.html"><img src="../images/carr-index2.jpg"></a></figure>
+                    <figure><a href="novDePC.html"><img src="../images/carr-novsobrepc.jpg"></a></figure>
+                    <figure><a href="../novDeConsolas/novDeConsolas.html"><img src="../images/carr-novsobrecons.jpg"></a></figure>
+                    <figure><a href="../contacto/contacto.html"><img src="../images/carr-contacto.jpg"></a></figure>
+                </div>
+            </div>
         </section>
-        <aside>
-            <h1>¿Que buscas?</h1>
-            <form action="">
-                <input type="text" />
-                <input type="submit" value="buscar" />
-            </form>
-            <br>
+        <aside> 
             <h2>Noticias:</h2>
             <p class="cuerpo">
             <article class="article">
